shrunk placeholder size, updated text in vote placeholder

--- a/Lab/Lab 2/vote.html
+++ b/Lab/Lab 2/vote.html
@@ -26,7 +26,7 @@
             <button type="button">&#8595</button>
             <small>-1</small><br>
 
-            <input type="text" id="upvoted" name="upvoted" placeholder="This is a note you haven't voted" readonly>
+            <input type="text" id="upvoted" name="upvoted" placeholder="This is a note you haven't voted on yet" readonly>
             <button type="button">&#8593</button>
             <button type="button">&#8595</button>
             <small></small><br>
