--- a/Lab/Lab 2/index.html
+++ b/Lab/Lab 2/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+     
+    
 <head>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
+    <title>Note-Vote</title>
 </head>
 
 <body>
@@ -14,22 +18,24 @@
         <h1>Login</h1>
 
         <label for="email">Email Address:</label>
-        <input type="text" id="email" name="email" placeholder="Email address"><br>
-        <label for="Password">Password:</label>
-        <input type="password" id="password" name="password" placeholder="Password"><br>
+        <input type="text" id="login-email" placeholder="Email address"><br>
+
+        <label for="password">Password:</label>
+        <input type="password" id="login-password" placeholder="Password"><br>
+
         <button type="button">Log in</button><br>
 
         <button type="button">Register</button>
 
         <h1>Sign Up</h1>
         <label for="email">Email Address:</label>
-        <input type="text" id="email" name="email" placeholder="Email address"><br>
+        <input type="text" id="email" placeholder="Email address"><br>
 
-        <label for="Password">Password:</label>
-        <input type="password" id="password" name="password" placeholder="Password"><br>
+        <label for="password">Password:</label>
+        <input type="password" id="password" placeholder="Password"><br>
 
         <label for="invitecode">Invite Code:</label>
-        <input type="text" id="invitecode" name="invitecode" placeholder="Password"><br>
+        <input type="text" id="invitecode" placeholder="Password"><br>
         <button type="button">Sign Up</button>
     </div>
 
