linked first log in button to vote page

--- a/Lab/Lab 2/index.html
+++ b/Lab/Lab 2/index.html
@@ -13,7 +13,10 @@
     <h1>Note-Vote</h1>
 
     <div class="mainwindow">
-        <button type="button">Log in</button>
+        <a href="vote.html">
+            <button type="button">Log in</button> <!-- The element button must not appear as a descendant of the a element -->
+        </a>
+        
 
         <h1>Login</h1>
 
